--- a/Client/src/styles/Main.css
+++ b/Client/src/styles/Main.css
@@ -20,7 +20,7 @@
     justify-content: center;
     flex-wrap: wrap; /* Allow wrapping if buttons exceed the container width */
     gap: 40px; /* Add some space between buttons */
-    margin-top: 4em; /* Move the buttons down a bit more */
+    margin-top: 3.5em; /* Move the buttons down a bit more */
 }
 
 .start .btn,
@@ -101,4 +101,18 @@
     border: none;
     border-radius: 3px;
     font-size: 1em;
+}
+
+.submission-message {
+    display: none;
+    margin-top: 3.5em;
+    padding: 1em;
+    /* color: #ffffff; */
+    color: #0af43d;
+    border: 1px solid #ffffff;
+    border-radius: 3px;
+}
+
+.submission-message.show {
+    display: block;
 }
