changed submission message color to black

--- a/Client/src/styles/Main.css
+++ b/Client/src/styles/Main.css
@@ -100,7 +100,7 @@
     display: none;
     margin-top: 3.5em;
     padding: 1em;
-    color: rgb(54, 226, 11);
+    color: black;
     border: 1px solid #ffffff;
     border-radius: 3px;
 }
